# swaparr

./: .gitignore  .rustc_info.json  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support-needed.md
.github/workflows/: binaries.yml  clean.yml  edge.yml  latest.yml  publish.yml  release.yml  rust.yml
src/: health.rs  logger.rs  main.rs  parser.rs  queue.rs  render.rs  system.rs  utils.rs
src/libs/: table.rs
src/tests/: api.rs
src/utils/: log.rs  logger.rs  mod.rs  parse.rs  system.rs
