[[bin]]
name = "swaparr"
path = "src/main.rs"

[package]
name = "swaparr"
version = "0.3.0"
edition = "2021"

[dependencies]
tabled = { version = "0.15.0" }
bytesize = { version = "1.3.0" }
humantime = { version = "2.1.0" }
ms-converter = { version = "1.4.0" }
serde = { version = "1.0.204", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
