
[package]
name = "swaparr"
edition = "2021"
authors = ["ThijmenGThN <mail@thijmenheuvelink.nl>"]
repository = "https://github.com/ThijmenGThN/swaparr"
description = "A robust solution addressing stalled downloads in Starr apps."

[dependencies]
tabled = { version = "0.15.0" }
bytesize = { version = "1.3.0" }
humantime = { version = "2.1.0" }
ms-converter = { version = "1.4.0" }
serde = { version = "1.0.204", features = ["derive"] }
openssl = { version = "0.10.66", features = ["vendored"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
