
[package]
name = "swaparr"
edition = "2021"
authors = ["ThijmenGThN <mail@thijmenheuvelink.nl>"]
repository = "https://github.com/ThijmenGThN/swaparr"
description = "A robust solution addressing stalled downloads in Starr apps."

[dependencies]
tabled = { version = "0.16.0" }
bytesize = { version = "1.3" }
humantime = { version = "2.1" }
ms-converter = { version = "1.4" }
serde = { version = "1.0.213", features = ["derive"] }
reqwest = { version = "0.12.8", features = [
    "blocking",
    "json",
    "rustls-tls",
], default-features = false }
